# MultiPersonCameraTrackingPOC

./: .gitignore  Beyond Sensing - Developing UP Squared based Computer Vision Projects | Intel® Software.desktop  CMakeLists.txt  Install the Intel® Distribution of OpenVINO™ toolkit for Linux* | Intel® Software (1).desktop  Install the Intel® Distribution of OpenVINO™ toolkit for Linux* | Intel® Software.desktop  Intel's Deep Learning Inference Engine backend · opencv\opencv Wiki · GitHub.desktop  ObjectDetection  ObjectDetection.cpp  OpenCV Python GTK Error - Stack Overflow.desktop  OpenCV: How to enable Halide backend for improve efficiency.desktop  OpenCV: Installation in Linux.desktop  OpenCV: cv::dnn::Net Class Reference.desktop  OpenVino support for Ubuntu 18.04.desktop  README.md  build_opencv_with_halide  commits.txt  erkenntnisse  history  prerequisites
include/: Camera.h  Clock.h  Logger.h  MainColorExtractor.h  ModelImageGenerator.h  NumberExtractor.h  PerspectiveToModelMapper.h  PlayerExtractor.h  PointConstellation.h  PointPair.h  RecognizedPlayer.h  TrackingModule.h
resources/archiv/sift/: CMakeLists.txt  Sift.cpp  Sift_simpel.cpp
resources/tests/position/: Position  Position.cpp
resources/tests/sift/: Sift  Sift.cpp  Sift_Old.cpp
resources/tools/groundtruth/: Groundtruth  (+3 more)
src/: Camera.cpp  Clock.cpp  Logger.cpp  MainColorExtractor.cpp  ModelImageGenerator.cpp  MultiTracker.cpp  NumberExtractor.cpp  ObjectDetection.cpp  PerspectiveToModelMapper.cpp  PlayerExtractor.cpp  PointConstellation.cpp  PointPair.cpp  RecognizedPlayer.cpp  TrackingModule.cpp
(+14 files in other folders)
