set (CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
cmake_minimum_required(VERSION 2.8)
project( MultiTracker )
find_package( OpenCV REQUIRED )
file(GLOB SOURCES "src/*.cpp")
include_directories( ${OpenCV_INCLUDE_DIRS}, include )
add_executable( MultiTracker ${SOURCES} )
target_link_libraries( MultiTracker ${OpenCV_LIBS} )
