set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
cmake_minimum_required(VERSION 2.8)
project( MultiTracker )
find_package( OpenCV REQUIRED )
file(GLOB SOURCES "src/*.cpp")
include_directories( ${OpenCV_INCLUDE_DIRS}, include )
add_executable( MultiTracker ${SOURCES} )
target_link_libraries( MultiTracker ${OpenCV_LIBS} )
